tests/type_sig_merge/async_void_return-export.js
// @flow

export const f = async () => {};

(f(): empty); // error: Promise ~> empty
